--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,20 +1,12 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0px;
+    height: 100vh;
+    background-color: #f4f4f4;
 }
 
 .alert {
-    background-color: #ff4545;
-    margin: 50px;
-}
-
-form {
-    background-color: #dbd5d5;
-    width: 30%;
-    height: 250px;
-    margin: 20px auto;
-    padding: 25px;
-    border-radius: 2px;
+    margin-bottom: 3em;
 }
 
 input {
@@ -22,22 +14,26 @@ input {
     margin-bottom: 10px;
 }
 
-.log-in, .log-out, .register {
-  background-color: #00acb0;
-  border-radius: 4px;
-  color: #f8f8f8;
-  min-height: 50px;
-  min-width: 100px;
-  outline:0;
-  cursor: pointer;
+.log-in:hover, .log-out:hover, .register:hover {
+  color: darkgray;
 }
 
-.log-in:hover, .log-out:hover, .register:hover {
-  background-color: #008183;
+.div-style {
+    margin-top: 7em;
 }
+
+
+/* form {
+    background-color: #dbd5d5;
+    width: 30%;
+    height: 250px;
+    margin: 20px auto;
+    padding: 25px;
+    border-radius: 2px;
+} */
 
 /* This line makes the "Register" and "Login" buttons look like links */
-.link-button {
+/* .link-button {
     background:none;
     color:inherit;
     border:none;
@@ -46,4 +42,15 @@ input {
     outline:0;
     border-bottom:1px solid #444; 
     cursor: pointer;
-}
+} */
+
+/* 
+.log-in, .log-out, .register {
+  background-color: green;
+  border-radius: 4px;
+  color: #f8f8f8;
+  min-height: 50px;
+  min-width: 100px;
+  outline:0;
+  cursor: pointer;
+} */
