--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,36 +1,22 @@
-.nav-title {
-    font-size: 24px;
-    font-weight: 700;
-    display: inline-block;
-    color: #f2f2f2;
-    padding-left: 10px;
-}
-
-.nav {
-  overflow: hidden;
-  background-color: #00acb0;
-}
-
 .nav-link {
-  float: left;
-  color: #f2f2f2;
-  background-color: #00acb0;
-  text-align: center;
-  padding: 24px 10px;
+  width: auto;
+  color:#7378a5;
   text-decoration: none;
-  font-size: 15px;
-
-  /* these last two make the logout button in
-  the nav bar look like another link */
+  font-size: 1.3em;
+  margin-right: 1em;
   border:none;
-  cursor: pointer;
   outline:0;
 }
 
 .nav-link:hover {
-  background-color: #008183;
+  color: #4c4c64;
 }
 
-.nav-right {
+/* .nav-right {
   float: right;
+} */
+
+.logo {
+  width: 80%;
 }
+
