--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -21,7 +21,7 @@
 }
 
 
-
+/*  VIEW BOX & CHILDRENS */
 .view-box {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -43,3 +43,26 @@
   grid-column: 3 / 7;
   grid-row: 2;
 }
+
+/* BUTTON Childrens */
+
+/* .btn-box {
+  display: grid;
+  grid-template-columns: repeat(12,1fr);
+}
+
+.child-btn-one {
+  /* background-color: blue; */
+  /* grid-column: 1 / 5;
+}
+
+.child-btn-two {
+  /* background-color: yellow; */
+  /* grid-column: 5 / 9;
+}
+
+.child-btn-three {
+  /* background-color: red; */
+  /* grid-column: 9 / 13;
+  padding-right: 25%;
+}  */ 
