--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -1,10 +1,17 @@
 table {
-  width: 80%;
+  width: 100%;
   border-collapse: collapse;
   font-family: 'Istok Web', sans-serif;
+  border: 1px solid #C4C4D3;
 }
 
-thead th {
-  background-color: #cafaef;
-  height: 40px;
+tr:nth-child(even) {
+  background-color: #E4E4F8;
+}
+table tr th{
+  padding-bottom: 0.5em;
+}
+
+tr td {
+  padding: 0.5em 0;
 }
