--- a/src/components/Benefits/Benefits.css
+++ b/src/components/Benefits/Benefits.css
@@ -5,7 +5,7 @@ table {
   border: 1px solid #C4C4D3;
 }
 
-tr:nth-child(even) {
+tbody tr:nth-child(odd) {
   background-color: #E4E4F8;
 }
 table tr th{
