add graph and test code to grab id

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -20,7 +20,7 @@
 }
 
 .box-benefit {
-  background-color: azure;
-  border: 1px solid gray;
-  height: 200px;
+  /* background-color: azure; */
+  /* border: 1px solid gray; */
+  height: 320px;
 }
