--- a/src/components/Policy/Policy.css
+++ b/src/components/Policy/Policy.css
@@ -15,3 +15,16 @@ table tr th{
 tr td {
   padding: 0.5em 0;
 }
+
+
+.hide {
+  display: none;
+}
+
+.item-span-2 {
+  padding-right: 3em;
+}
+
+.item-span-3 {
+  float: right;
+}
