--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,9 +1,12 @@
 .ava {
-  width: 130px;
+  width: 190px;
+  height: 210px; 
   padding: 1em 1em 0 1em;
-  border-radius: 5px;
-  border: 1px solid gray;
+  border-radius: 50%;
+  border: 1px solid #c0c4ea;
   background-color: #ffffff;
+  box-shadow: -1px 2px 3px -2px #324a96;
+  /* rgba(115,120,165,1); */
 }
 /* 
 .avatar-block {
@@ -34,23 +37,23 @@
 .view-box {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-auto-rows: 240px 240px;
+  /* grid-auto-rows: 240px 240px; */
 }
 .view-child-one {
-  background-color: aqua;
-  grid-column: 1 / 3;
-  grid-row: span 2;
-  padding: 1em;
+  background: linear-gradient( white 50%, #e5fffc 50%);
+  /* color: #4c4c64; */
+  grid-column: span 7;
+  padding-top: 3em;
+  padding-bottom: 1em
 }
 .view-child-two {
-  background-color: yellow;
-  grid-column: 3 / 7;
-  grid-row: span 1;
+  background-color: #e5fffc;
+  grid-column: span 7;
+  
 }
 .view-child-three {
-  background-color: yellowgreen;
-  grid-column: 3 / 7;
-  grid-row: 2;
+  background-color: #e5fffc;
+  grid-column: span 7;
 }
 
 /* BUTTON Childrens */
@@ -75,3 +78,44 @@
   /* grid-column: 9 / 13;
   padding-right: 25%;
 }  */ 
+.text-styles {
+  text-align: center;
+  font-size: 2em;
+  text-transform: capitalize;
+  padding-bottom: 0.5em;
+}
+.item-span {
+  margin-right: 0.5em;
+} 
+p {
+  margin: 0;
+}
+
+.p-two {
+  border-left: 1px solid #c0c4ea;
+  padding-left: 1em;
+}
+.p-one {
+  font-size: 1.2em;
+  margin-top: 0.5em;
+  color: #a8abc4;
+  padding-bottom: 0.5em;
+}
+.p-three {
+  padding-right: 1em;
+}
+.blank-div {
+  width: 70%;
+  height: 1px;
+  background-color: #c0c4ea;
+}
+
+.insurance {
+  font-size: 1.3em;
+  margin-top: 1em;
+  padding: 0.5em 0;
+  background-color: #324a96;
+  /* #a8abc4;  */
+  color: #f7f7fa;
+  width: 70%;
+}
