--- a/src/components/Modal/ModalAvatar.css
+++ b/src/components/Modal/ModalAvatar.css
@@ -1,5 +1,5 @@
 .avatar {
-  width: 130px;
+  width: 110px;
 }
 .avatar-h2{
   color: #7378a5;
@@ -7,15 +7,9 @@
 .one, .two, .three {
   border: 2px solid #c0c4ea;
   border-radius: 5px;
-  padding: 1.5em;
+  padding: 1.5em 1.5em 0 1.5em;
 }
 
-.two, .three {
+.one, .two, .three {
   margin-left: 1em;
-}
-
-.ani {
-  animation-name: slideInDown;
-  animation-delay: 2s;
-  animation-duration: 3s;
 }
