--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,4 +1,4 @@
-.ava {
+/* .ava {
   width: 190px;
   height: 210px; 
   padding: 1em 1em 0 1em;
@@ -6,8 +6,8 @@
   border: 1px solid #c0c4ea;
   background-color: #ffffff;
   box-shadow: -1px 2px 3px -2px #324a96;
-  /* rgba(115,120,165,1); */
-}
+  
+} */
 /* 
 .avatar-block {
   width: 100%;
@@ -102,17 +102,18 @@ p {
   padding-bottom: 0.5em;
 }
 .p-three {
-  padding-right: 1em;
+  padding: 1.5em 1em;
 }
 .blank-div {
   width: 70%;
   height: 1px;
   background-color: #c0c4ea;
+  margin: 0.5em 0;
 }
 
 .insurance {
   font-size: 1.3em;
-  margin-top: 1em;
+  margin-top: 2em;
   padding: 0.5em 0;
   background-color: #324a96;
   /* #a8abc4;  */
