--- a/src/components/Policy/Policy.css
+++ b/src/components/Policy/Policy.css
@@ -76,22 +76,22 @@ tr td {
 }
 .policyItems2 {
   padding-top: 2.2em;
-  width: 40%;
+  width: 45%;
   justify-content: center;
   align-items: center;
   /* border: 2px solid red; */
 }
 .policyItems22 {
-  width: 40%;
+  width: 45%;
   justify-content: center;
   align-items: center;
   /* border: 2px solid pink; */
 }
 
 .policyItems3 {
-  width:40%;
-  justify-content: flex-start;
-  align-items: flex-start;
+  width:45%;
+  justify-content: center;
+  align-items: center;
   /* border: 2px solid blue; */
 }
 
