--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -27,3 +27,59 @@
   /* border: 1px solid gray; */
   height: 320px;
 }
+
+/* ICON GRID */
+.icon-grid {
+  display: flex;
+  flex-direction: column;
+}
+
+.icon-one {
+  background-color: #ada6ed;
+  height: 200px;
+  padding-top: 3em;
+}
+.icon-two {
+  background-color: #7060ed;
+  height: 200px;
+  padding: 2em 0;
+}
+.icon-three {
+  background-color: #5140ed;
+  height: 200px;
+  padding-top: 3em;
+}
+.icon-four {
+  background-color: #362abf;
+  height: 200px;
+  padding-top: 3em;
+}
+
+
+@media screen and (max-width: 768px) {
+  .icon-grid {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .icon-one, .icon-two, .icon-three, .icon-four {
+    width: 100px;
+    height: 100%;
+    font-size: 10px;
+    padding: 1em;
+  }
+  .profile-icon {
+    width: 60%;
+  }
+  .policy-icon {
+    width: 55%;
+  }
+  
+  .graph-icon {
+    width: 40%;
+  }
+  .money-icon {
+    width: 55%;
+  }
+}
