--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,8 +18,15 @@ input {
   color: darkgray;
 }
 
+.wrapper {
+    height: 100vh;
+}
+
 .div-style {
-    margin-top: 7em;
+    max-width:1100px;
+    width:100%;
+    padding: 10em 0 5em 0;
+    margin:0 auto;
 }
 
 
